Added a single bit field to the basic example

--- a/tests/basic.rdl
+++ b/tests/basic.rdl
@@ -16,7 +16,8 @@ addrmap basic {
     reg {
         default sw = r;
         default hw = r;
-        field {  } basicfield_d[31:16];
+        field { fieldwidth=1;  } basicfield_d[0:0];
+        field {  } basicfield_e[2:1];
 
     } basicreg_c;
 
